large update push

--- a/components/navigation.html
+++ b/components/navigation.html
@@ -10,14 +10,7 @@
         <div class="navbar-nav">
             <a class="nav-item nav-link active" href="/index.html">Home <span class="sr-only">(current)</span></a>
             <a class="nav-item nav-link" href="https://www.1800flowers.com/">Buy a Gift</a>
-            <a class="nav-item nav-link" href="#">Our Brands</a>
-            <div id="signinButton" class="pre-sign-in">
-                <!-- IMPORTANT: Replace the value of the <code>data-clientid</code>
-                               attribute in the following tag with your project's client ID. -->
-                <span class="g-signin" data-callback="signinCallback" data-clientid="1071346195772-futdta4g0r3mmsj7vo5ftjb53ifloncp.apps.googleusercontent.com"
-                    data-cookiepolicy="single_host_origin" data-scope="https://www.googleapis.com/auth/youtube.upload https://www.googleapis.com/auth/youtube">
-                </span>
-            </div>
+            <a class="nav-item nav-link" href="https://pwa.www.1800flowers.com/customer-service">Customer Service</a>
         </div>
     </div>
 </nav>
