--- a/css/custom.css
+++ b/css/custom.css
@@ -1,3 +1,17 @@
+.btn-circle {
+  width: 40px;
+  height: 40px;
+  text-align: center;
+  padding: 8px 0;
+  line-height: 1.42;
+  border-radius: 20px;
+  position: fixed;
+  right: 20px;
+  bottom: 20px;
+  background-color: #52237f;
+  color: white !important;
+}
+
 .navbar-brand img {
   height: 40px;
 }
@@ -36,14 +50,49 @@ body {
   text-align: center;
   color: #bdbdbd;
 }
+
+.icon-sm {
+  display: inline-block;
+  margin: 5px;
+  text-align: center;
+  color: #bdbdbd;
+}
+
+.border-purple {
+  border-color: #52237f;
+}
+
 .icon-label {
   display: block;
-  font-size: 0.75em;
+  font-size: 1em;
 }
 
 .share-icon,
 .share-icon a {
   color: #bdbdbd !important;
+}
+
+.carousel-inner {
+  text-align: center;
+}
+
+.carousel-image {
+  width: 15%;
+}
+
+.carousel-control-prev-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+}
+
+.carousel-control-next-icon {
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+}
+
+.carousel-indicators {
+  bottom: -20px;
+}
+.carousel-indicators li {
+  background-color: #000;
 }
 
 .home > .navbar {
