--- a/css/custom.css
+++ b/css/custom.css
@@ -32,9 +32,9 @@ body {
   font-family: "Roboto", sans-serif;
 }
 
-.pre-sign-in {
+/* .pre-sign-in {
   display: none;
-}
+} */
 
 .icon-container {
   background-color: #dedede;
