add checkboxs to items; reformatted; the say thank you; css styling changes

--- a/components/say-thank-you.html
+++ b/components/say-thank-you.html
@@ -11,40 +11,64 @@
     </a>
     <div class="collapse show" id="sayThankYou">
       <ul class="list-group list-group-flush">
-        <li class="list-group-item">
-          <div class="d-flex align-items-center justify-content-start">
-            <div class="px-2">
+        <li class="list-group-item container-fluid px-0">
+          <div class="row">
+            <div class="col-3">
               <img
                 src="https://cdn1.cheryls.com/wcsstore/CherylAndCompany/images/catalog/cco_FDY17_162801x.jpg"
                 width="50px"
                 height="50px"
               />
             </div>
-            <div class="p-2">Thank U Cookie Card</div>
+            <div class="col-7">Thank U Cookie Card</div>
+            <div class="col-2">
+              <input
+                data-item="Thank you Gracelet Greeting"
+                data-price="$10.00"
+                type="checkbox"
+                class="custom-checkbox item-1"
+              />
+            </div>
           </div>
         </li>
-        <li class="list-group-item">
-          <div class="d-flex align-items-center justify-content-start">
-            <div class="px-2">
+        <li class="list-group-item container-fluid px-0">
+          <div class="row">
+            <div class="col-3">
               <img
                 src="https://cdn1.cheryls.com/wcsstore/CherylAndCompany/images/catalog/cco_FDY17_162941x.jpg"
                 width="50px"
                 height="50px"
               />
             </div>
-            <div class="px-2">You're Toad-ally Awesome Cookie Card</div>
+            <div class="col-7">You're Toad-ally Awesome Cookie Card</div>
+            <div class="text-justify-right col-2">
+              <input
+                data-item="Thank you Gracelet Greeting"
+                data-price="$10.00"
+                type="checkbox"
+                class="custom-checkbox item-2"
+              />
+            </div>
           </div>
         </li>
-        <li class="list-group-item">
-          <div class="d-flex align-items-center justify-content-start">
-            <div class="px-2">
+        <li class="list-group-item container-fluid px-0">
+          <div class="row">
+            <div class="col-3">
               <img
                 src="https://cdn1.cheryls.com/wcsstore/CherylAndCompany/images/catalog/cco_FAL16_147981_v1x.jpg"
                 width="50px"
                 height="50px"
               />
             </div>
-            <div class="px-2">Thank you Gracelet Greeting</div>
+            <div class="col-7">Thank you Gracelet Greeting</div>
+            <div class="text-justify-right col-2">
+              <input
+                data-item="Thank you Gracelet Greeting"
+                data-price="$10.00"
+                type="checkbox"
+                class="custom-checkbox item-3"
+              />
+            </div>
           </div>
         </li>
       </ul>
