--- a/css/custom.css
+++ b/css/custom.css
@@ -25,6 +25,14 @@
   color: white;
 }
 
+.carousel-image {
+  height: 100px;
+}
+
+.carousel-inner {
+  height: 11em;
+}
+
 html,
 body {
   height: 100%;
@@ -48,7 +56,7 @@ body {
   display: inline-block;
   margin: 10px;
   text-align: center;
-  color: #bdbdbd;
+  color: #52237f;
 }
 
 .icon-sm {
@@ -81,11 +89,11 @@ body {
 }
 
 .carousel-control-prev-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2352237f' viewBox='0 0 8 8'%3E%3Cpath d='M5.25 0l-4 4 4 4 1.5-1.5-2.5-2.5 2.5-2.5-1.5-1.5z'/%3E%3C/svg%3E") !important;
 }
 
 .carousel-control-next-icon {
-  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%23000' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
+  background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns='http://www.w3.org/2000/svg' fill='%2352237f' viewBox='0 0 8 8'%3E%3Cpath d='M2.75 0l-1.5 1.5 2.5 2.5-2.5 2.5 1.5 1.5 4-4-4-4z'/%3E%3C/svg%3E") !important;
 }
 
 .carousel-indicators {
@@ -121,6 +129,12 @@ h5 {
 h6 {
   font-size: 0.75em;
 }
+
+.custom-checkbox {
+  width: 1.25rem;
+  height: 1.25rem;
+}
+
 .button-100 {
   width: 100%;
 }
