shopping cart now dynamically adds and removes items

--- a/components/say-thank-you.html
+++ b/components/say-thank-you.html
@@ -23,6 +23,7 @@
             <div class="col-7">Thank U Cookie Card</div>
             <div class="col-2">
               <input
+                data-id="1"
                 data-item="Thank you Gracelet Greeting"
                 data-price="$10.00"
                 type="checkbox"
@@ -43,7 +44,8 @@
             <div class="col-7">You're Toad-ally Awesome Cookie Card</div>
             <div class="text-justify-right col-2">
               <input
-                data-item="Thank you Gracelet Greeting"
+                data-id="2"
+                data-item="You're Toad-ally Awesome Cookie Card"
                 data-price="$10.00"
                 type="checkbox"
                 class="custom-checkbox item-2"
@@ -63,6 +65,7 @@
             <div class="col-7">Thank you Gracelet Greeting</div>
             <div class="text-justify-right col-2">
               <input
+                data-id="3"
                 data-item="Thank you Gracelet Greeting"
                 data-price="$10.00"
                 type="checkbox"
