--- a/components/shopping-cart.html
+++ b/components/shopping-cart.html
@@ -37,12 +37,15 @@
                 <th scope="col">Cost</th>
               </tr>
             </thead>
-            <tbody>
-              <tr>
-                <th scope="row">Thank U Cookie Card</th>
-                <td>1x</td>
-                <td>$5.99</td>
-              </tr>
+            <tbody class="items-container">
+              <!--
+                <tr>
+                  <th scope="row">Thank U Cookie Card</th>
+                  <td>1x</td>
+                  <td>$5.99</td>
+                </tr>
+              -->
+              <!-- ITEMS ADDED TO CARTS -->
             </tbody>
           </table>
         </div>
